--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px 'Hiragino Mincho ProN'; -webkit-text-stroke: #000000"><span class="s1"><b>■ プライバシーポリシーの見直しについて</b></span></h2>
 <p class="p2"><span class="s1">本ポリシーの内容は、必要に応じて見直し・変更されることがあります。重要な変更があった場合は、アプリ内やWebサイト等でお知らせいたします。</span></p>
 <h2 style="margin: 0.0px 0.0px 14.9px 0.0px; font: 18.0px 'Hiragino Mincho ProN'; -webkit-text-stroke: #000000"><span class="s1"><b>■ お問い合わせ</b></span></h2>
-<p class="p2"><span class="s1">プライバシーに関するご質問やご不明点がある場合は、設定画面の「お問い合わせ」もしくは、</span><span class="s3">chokokata.info@gmail.com'</span></p>
+<p class="p2"><span class="s1">プライバシーに関するご質問やご不明点がある場合は、設定画面の「お問い合わせ」もしくは、</span><span class="s3">chokokata.info@gmail.com</span></p>
 <p class="p2"><span class="s1">よりご連絡ください。</span></p>
 <p class="p2"><span class="s1">これからも「ちょこかた」を安心してご利用いただけるよう、丁寧な運営を心がけてまいります。</span></p>
 </body>
